feat(maven) add maven-surefire-plugin, decide -XX:+EnableDynamicAgentLoading problem